update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -11,6 +11,9 @@ contributor:
     gutenberg_agent_id: '31865'
     url: http://www.gutenberg.org/2009/agents/31865
     wikipedia: https://en.wikipedia.org/wiki/William_Glackens
+covers:
+- cover_type: archival
+  image_path: 70469-h/images/cover.jpg
 creator:
   author:
     agent_name: Seawell, Molly Elliot
@@ -25,6 +28,8 @@ creator:
     - http://www.gutenberg.org/ebooks/author/43099
     - https://en.wikipedia.org/wiki/Molly_Elliot_Seawell
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70469#Papa-Bouchard
 gutenberg_issued: '2023-04-05'
 identifiers:
   gutenberg: '70469'
